[package]
name = "phaseys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", default-features = false}
baseplug = { git = "https://github.com/wrl/baseplug.git", package = "baseplug" }
ringbuf = "*"
num = "*"

[lib]
name = "phaseys"
path = "src/plugin.rs"
crate-type = ["cdylib"]